reactive-form and validators

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,8 @@
             <a
             class="list-group-item"
             style="cursor: pointer"
-            *ngFor="let ingredient of intredients"
+            *ngFor="let ingredient of intredients; let i = index"
+            (click)="onEditItem(i)"
             >
             {{ ingredient.name }} ({{ ingredient.amount }})
         </a>
